--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,10 @@ body{
 .tst{
     color: brown;
     background-color: blanchedalmond;
+}.classe{
+    color: aquamarine ;
+}
+
+.dmd{
+    background-color: blue;
 }
